--- a/src/app/security/perfil.ngurl.component.html
+++ b/src/app/security/perfil.ngurl.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="perfilNgUrlForm" (ngSubmit)="onSubmit(perfilForm.value)">
+<form [formGroup]="perfilNgUrlForm" (ngSubmit)="onSubmit(perfilNgUrlForm.value)">
     <p-panel header="{{headerTitle}}">
                 <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">   
                     <div class="ui-grid-row">
@@ -8,7 +8,7 @@
                     </div>
                     <div class="ui-grid-row">    
                         <div class="ui-grid-col-4">
-                                <input class="form-control"  style="width:100%" type="text"  formControlName="descripcion" pInputText [pKeyFilter]="noSpecial" [pValidateOnly]="false">                                
+                                <input class="form-control" disabled style="width:100%" type="text"  formControlName="descripcion" pInputText [pKeyFilter]="noSpecial" [pValidateOnly]="false">                                
                         </div>
                         <div class="ui-grid-col-4">
                             <p-message severity="error" text="Ingrese descripción del Perfil" 
