--- a/src/app/security/usuario.list.component.html
+++ b/src/app/security/usuario.list.component.html
@@ -13,23 +13,26 @@
             </div>
         </div>   
 <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">        
-<p-virtualScroller [value]="perfiles" scrollHeight="500px" [itemSize]="140" [rows]="10" [cache]="false" 
-    [lazy]="true" (onLazyLoad)="loadData($event)" [totalRecords]="totalLazyPerfilLength">
-        <ng-template let-perfil pTemplate="item">
+<p-virtualScroller [value]="usuarios" scrollHeight="500px" [itemSize]="160" [rows]="10" [cache]="false" 
+    [lazy]="true" (onLazyLoad)="loadData($event)" [totalRecords]="totalLazyUsuariosLength">
+        <ng-template let-usuario pTemplate="item">
             <div class="ui-g-12 ui-md-8">
                 <div class="ui-g">
                     <div class="ui-g-2 ui-sm-6">id: </div>
                     <div class="ui-g-10 ui-sm-6">
-                        <a [routerLink]="['/perfil','edit',perfil?.id]" (click)="selectPerfil($event)">{{perfil?.id}}</a>
+                        <a [routerLink]="['/user','edit',usuario?.id]" >{{usuario?.id}}</a>
                     </div>
  
         
-                    <div class="ui-g-2 ui-sm-6">Descripción: </div>
-                    <div class="ui-g-10 ui-sm-6">{{perfil?.descripcion}}</div>
+                    <div class="ui-g-2 ui-sm-6">Apellido: </div>
+                    <div class="ui-g-10 ui-sm-6">{{usuario?.apellido}}</div>
 
-                    <div class="ui-g-2 ui-sm-6">URLs: </div>
-                    <div class="ui-g-10 ui-sm-6"><a [routerLink]="['/perfilurl',perfil?.id]"><i class="fa fa-plus-square" aria-hidden="true"></i></a></div>                    
-
+                    <div class="ui-g-2 ui-sm-6">Nombre: </div>
+                    <div class="ui-g-10 ui-sm-6">{{usuario?.nombre}}</div>
+                    
+                    <div class="ui-g-2 ui-sm-6">Usuario: </div>
+                    <div class="ui-g-10 ui-sm-6">{{usuario?.username}}</div>                    
+ 
         
                 </div>
             </div>
