--- a/src/app/security/usuario.component.html
+++ b/src/app/security/usuario.component.html
@@ -88,6 +88,25 @@
                     </div>
                 
                 </div>  
+                <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px"> 
+                    <div class="ui-grid-row">
+                        <p-pickList (onMoveToSource)="OnMoveTarget($event)" (onMoveToTarget)="OnMoveTarget($event)" [source]="perfiles" [target]="perfilesAdded" sourceHeader="Perfiles Disponibles" targetHeader="Perfiles Asignados" 
+                            [responsive]="true" filterBy="url" 
+                            dragdrop="true" sourceFilterPlaceholder="Filtrar por Descripción" targetFilterPlaceholder="Filtrar por Descripción" 
+                            [sourceStyle]="{'height':'300px'}" [targetStyle]="{'height':'300px'}">
+                            <ng-template let-ngurl pTemplate="item">
+                                <div class="ui-helper-clearfix">
+                                    
+                                    <div style="font-size:14px;float:left;margin:15px 5px 0 0">{{ngurl.id}} - {{ngurl.url}}</div>
+                                </div>
+                            </ng-template>
+                        </p-pickList>   
+                        <div class="ui-grid-col-4">
+                            <p-message severity="error" text="Agregue las Urls" 
+                                *ngIf="perfilNgUrlForm.get('ngurls').errors &&  perfilNgUrlForm.get('ngurls').errors.required"></p-message>
+                        </div>                                         
+                    </div>                    
+                </div>                    
         </p-panel>
 
         <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid"  style="margin: 10px 0px">
