--- a/src/app/alumno/alumno.list.component.html
+++ b/src/app/alumno/alumno.list.component.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
         </ng-template>     
-    <!--ng-template let-alumno pTemplate="loadingItem">
+    <ng-template let-alumno pTemplate="loadingItem">
             
             <div class="ui-g-12 ui-md-8">
                 <div  class="ui-g">
@@ -45,6 +45,6 @@
                 </div>
             </div>
         
-    </ng-template-->        
+    </ng-template>        
 </p-virtualScroller>        
 </div>
