--- a/src/app/security/usuario.list.component.html
+++ b/src/app/security/usuario.list.component.html
@@ -40,17 +40,25 @@
         
     </ng-template-->        
 <!-- /p-virtualScroller-->        
+<p-panel header="Listado de Usuarios">
 <p-dataView [value]="usuarios" [paginator]="true" [rows]="5"
     [lazy]="true" (onLazyLoad)="loadData($event)" [totalRecords]="totalLazyUsuariosLength">
     <p-header>
         <div class="ui-helper-clearfix">
             <div class="ui-g">
-                <div class="ui-g-12 ui-md-4">
+                <div class="ui-g-12 ui-md-4" style="display: inline-flex">
                     <p-dropdown [options]="sortOptions" [(ngModel)]="sortKey" placeholder="Ordenar Por" (onChange)="onSortChange($event)" [style]="{'min-width':'140px'}"></p-dropdown>
+                    <div style="position:relative"><p-toggleButton  onIcon="fa fa-sort-desc"
+                            (onChange)="handleChange($event)"
+                            offIcon="fa fa-sort-asc" onLabel="" ofLabel=""  
+                            [(ngModel)]="ascSort"></p-toggleButton></div>
                 </div>
+                
+                    
+                
                 <div class="ui-g-6 ui-md-4 filter-container">
                     <div style="position:relative">
-                        <input type="search" pInputText  [formControl]="searchControl" pInputText placeholder="Filtar por " >
+                        <input type="text"  [formControl]="searchControl"  placeholder="Filtrar por " />
                         
                     </div>
                 </div>
@@ -85,4 +93,5 @@
         </div>
     </ng-template>
 </p-dataView>
+</p-panel>
 </div>
