--- a/src/app/security/change.password.component.html
+++ b/src/app/security/change.password.component.html
@@ -1,10 +1,39 @@
 <p-toast [style]="{marginTop: '80px'}"></p-toast>
 
 <form [formGroup]="changePassForm" (ngSubmit)="onSubmit(changePassForm.value)">
-<p-panel header="Cambiar Contraseña">
+<p-panel header="{{headerTitle}}">
         <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
+
+            <div *ngIf="changePassForm.get('id').value!=null" class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
+                <div class="ui-grid-row">
+                        <div class="ui-grid-col-1">
+                            Id:
+                        </div>
+                </div>     
+
+                <div class="ui-grid-row">    
+                    <div class="ui-grid-col-2">
+                        <input style="width:100%"   formControlName="id" disabled />
+                    </div>
+
+                </div>    
+
+                    <div class="ui-grid-row">
+                        <div class="ui-grid-col-3">
+                            Nombre de Usuario:
+                        </div>
+                    </div>    
+                    <div class="ui-grid-row">    
+                            <div class="ui-grid-col-2">
+                                <input style="width:100%"   formControlName="userName" disabled />
+                            </div>
+
+                    </div>    
+            </div>                                
+            
+
             <div class="ui-grid-row">
-                <div class="ui-grid-col-2">
+                <div class="ui-grid-col-3">
                     Contraseña Anterior *:
                 </div>
             </div>
@@ -22,7 +51,7 @@
                 </div>
             </div>
             <div class="ui-grid-row">
-                    <div class="ui-grid-col-2">
+                    <div class="ui-grid-col-3">
                         Nueva Contraseña *:
                     </div>
             </div>
@@ -37,7 +66,7 @@
                 </div>            
             </div>
             <div class="ui-grid-row">
-                    <div class="ui-grid-col-2">
+                    <div class="ui-grid-col-3">
                         Repita Nueva Contraseña *:
                     </div>
             </div>     
@@ -52,13 +81,15 @@
             </div>  
         
 
-        <div class="ui-grid-row">
-                <div class="ui-grid-col-2"></div>
-                <div class="ui-grid-col-6">
-                    <button pButton type="submit" label="Confirmar" [disabled]="!changePassForm.valid"></button>
-                </div>
-                <div class="ui-grid-col-4"></div>
-        </div>  
+
     
-</p-panel>      
+</p-panel>    
+
+<div class="ui-grid-row">
+    <div class="ui-grid-col-2"></div>
+    <div class="ui-grid-col-6">
+        <button pButton type="submit" label="Confirmar" [disabled]="!changePassForm.valid"></button>
+    </div>
+    <div class="ui-grid-col-4"></div>
+</div>  
 </form>      
