--- a/src/app/security/change.passworduser.component.html
+++ b/src/app/security/change.passworduser.component.html
@@ -32,24 +32,6 @@
             </div>                                
             
 
-            <div *ngIf="changePassForm.get('id').value==null" class="ui-grid-row">
-                <div class="ui-grid-col-3">
-                    Contraseña Anterior *:
-                </div>
-            </div>
-            <div *ngIf="changePassForm.get('id').value==null" class="ui-grid-row">    
-                <div class="ui-grid-col-6">
-                    <input pPassword type="password" formControlName="passwordAnterior" placeholder="Requerido"/>
-                </div>
-                <div class="ui-grid-col-4">
-                    <p-message severity="error" text="Ingrese su contraseña anterior" 
-                        *ngIf="changePassForm.get('passwordAnterior').dirty && changePassForm.get('passwordAnterior').errors && changePassForm.get('passwordAnterior').errors.required"></p-message>
-                </div>
-                <div class="ui-grid-col-4">
-                    <p-message severity="error" text="La contraseña anterior no es correcta" 
-                    *ngIf="changePassForm.get('passwordAnterior').dirty && changePassForm.get('passwordAnterior').errors && changePassForm.get('passwordAnterior').errors.wrongOldPassword"></p-message>
-                </div>
-            </div>
             <div class="ui-grid-row">
                     <div class="ui-grid-col-3">
                         Nueva Contraseña *:
@@ -88,7 +70,7 @@
 <div class="ui-grid-row">
     <div class="ui-grid-col-2"></div>
     <div class="ui-grid-col-6">
-        <button pButton type="submit" label="Confirmar" [disabled]="!onValid()"></button>
+        <button pButton type="submit" label="Confirmar" [disabled]="!changePassForm.valid"></button>
     </div>
     <div class="ui-grid-col-4"></div>
 </div>  
