--- a/src/app/inscripcion/inscripcion.new.component.html
+++ b/src/app/inscripcion/inscripcion.new.component.html
@@ -25,7 +25,7 @@
                         </div>
                         <div class="ui-grid-col-4">
                             <p-message severity="error" text="Ingrese un D.N.I válido" 
-                                *ngIf="dniCtrl.errors.required"></p-message>
+                                *ngIf="inscripcionForm.get('dni').dirty && inscripcionForm.get('dni').errors?.required"></p-message>
                         </div>
                     </div>
                     <div class="ui-grid-row">
