--- a/src/app/inscripcion/inscripcion.new.component.html
+++ b/src/app/inscripcion/inscripcion.new.component.html
@@ -21,12 +21,17 @@
                     </div>
                     <div class="ui-grid-row">    
                         <div class="ui-grid-col-4">
-                                <p-inputMask [formControl]="dniCtrl" formControlName="dni"  mask="99.999.999" ></p-inputMask>
+                                <p-inputMask  formControlName="dni"  mask="99.999.999" ></p-inputMask>
                         </div>
                         <div class="ui-grid-col-4">
                             <p-message severity="error" text="Ingrese un D.N.I válido" 
                                 *ngIf="inscripcionForm.get('dni').dirty && inscripcionForm.get('dni').errors?.required"></p-message>
                         </div>
+                        <div class="ui-grid-col-4">
+                            <p-message severity="error" text="El D.N.I no existe"
+                                *ngIf="inscripcionForm.get('dni').dniExist">
+                            </p-message>    
+                        </div>    
                     </div>
                     <div class="ui-grid-row">
                         {{apellido}} - {{nombre}}
