--- a/src/app/inscripcion/inscripcion.new.component.html
+++ b/src/app/inscripcion/inscripcion.new.component.html
@@ -60,7 +60,42 @@
                                     
                                 </div>    
                             </div>                       
-                 </div>                   
+                 </div>  
+
+                <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
+                        <div class="ui-grid-row">
+                            <div class="ui-grid-col-3">
+                                Curso:
+                            </div>    
+                        </div>    
+    
+                        <div class="ui-grid-row">
+                                <div class="ui-grid-col-3">
+                                    <p-autoComplete formControlName="turno" [suggestions]="filteredParentesco" 
+                                        (completeMethod)="filterParentesco($event)" field="anio" [size]="30"
+                                        [minLength]="1" [dropdown]="true"></p-autoComplete>
+    
+                                    
+                                </div>    
+                            </div>                       
+                 </div>  
+                <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
+                        <div class="ui-grid-row">
+                            <div class="ui-grid-col-3">
+                                División:
+                            </div>    
+                        </div>    
+    
+                        <div class="ui-grid-row">
+                                <div class="ui-grid-col-3">
+                                    <p-autoComplete formControlName="turno" [suggestions]="filteredParentesco" 
+                                        (completeMethod)="filterParentesco($event)" field="anio" [size]="30"
+                                        [minLength]="1" [dropdown]="true"></p-autoComplete>
+    
+                                    
+                                </div>    
+                            </div>                       
+                 </div>                                                                                       
          
     </p-panel>    
     <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid"  style="margin: 10px 0px">
